--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html:hover .spider {
 .spider .body {
     width: 100px;
     height: 80px;
-    background: #000;
+    background: #0cdbff;
     position: relative;
     border-radius: 50%;
 }
@@ -78,7 +78,7 @@ html:hover .spider {
     height: 40px;
     margin-top: -20px;
     border: 5px solid transparent;
-    border-top-color: #000;
+    border-top-color: #1e00ff;
     border-radius: 40px 40px 0 0;
 }
 
